Update MarsProjectHeadlessStarter.java
Here’s MarsProjectHeadlessStarter.java with the deprecation fixes applied:

Replaced deprecated StringUtils.containsIgnoreCase(...) calls with Strings.CI.contains(...) from Apache Commons Lang 3.18+.

Replaced deprecated Runtime.getRuntime().exec(String) with ProcessBuilder.
To keep behavior correct across platforms (and with quoted paths/args), this version tokenizes the composed command string into arguments, honoring double quotes and simple backslash escapes.